scrollbar fixed

--- a/src/index.css
+++ b/src/index.css
@@ -2,17 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
-    background: black;
+body {
+  background: black;
 }
 
 .react-player {
-    height: 77vh !important;
-    width: 100% !important;
-  }
+  height: 77vh !important;
+  width: 100% !important;
+}
 
-  @media screen and (max-width: 600px) {
-    .react-player {
-      height: 45vh !important;
-    }
+@media screen and (max-width: 600px) {
+  .react-player {
+    height: 45vh !important;
   }
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  height: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(114, 113, 113);
+  border-radius: 10px;
+  height: 200px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
